# DataDrivenVC

./: .gitignore  investment_thesis.txt  kipu-quantum.com.txt  planqc.eu.txt  pyproject.toml
src/: main.py  main_julia.py
tests/: test_main_julia.py
